--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <section class="hero reveal" id="hero">
   <h2>INGENIERÍA APLICADA AL <br><span>MARKETING DIGITAL.</span></h2>
-  <p>Somos una agencia fundada por estudiantes de Ciencias de la Computación. Creamos código limpio y estrategias digitales para negocios en <b>Sancti Spíritus, Villa Clara y Cienfuegos</b> que buscan escalar.</p>
+  <p>Somos Agencia Señores, un equipo de desarrolladores de software y expertos en marketing en el centro de Cuba. Ayudamos a MIPYMES y negocios privados a digitalizarse.. Creamos código limpio y estrategias digitales para negocios en <b>Sancti Spíritus, Villa Clara y Cienfuegos</b> que buscan escalar.</p>
   <div>
     <a href="https://wa.me/5356621636?text=Hola%20Señores,%20quiero%20digitalizar%20mi%20negocio." target="_blank" class="btn">COTIZAR MI PROYECTO</a>
   </div>
@@ -247,4 +247,5 @@
 <script src="js/script.js"></script>
 
 </body>
+
 </html>
