--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <header>
   <a href="#hero" class="brand">
     <div class="logo">
-      <img src="img/logo.png" alt="Agencia Señores Diseño Web" width="45" height="auto">
+      <img src="img/favicon.png" alt="Agencia Señores Diseño Web" width="45" height="auto">
     </div>
     <div>
       <div class="wordmark">SEÑORES</div>
@@ -268,3 +268,4 @@
 
 </body>
 </html>
+
