--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
     "name": "Señores Agencia",
-    "image": "https://seniorsdigital.netlify.app/img/logo.png",
+    "image": "https://seniorsdigital.netlify.app/img/favicon.png",
     "description": "Agencia de desarrollo de software y marketing digital especializada en negocios privados en Cuba.",
     "address": {
       "@type": "PostalAddress",
@@ -62,7 +62,7 @@
 <header>
   <a href="#hero" class="brand">
     <div class="logo">
-      <img src="img/favicon.png" alt="Agencia Señores Diseño Web" width="45" height="auto">
+      <img src="img/favicon.png" alt="Logo Agencia Señores" width="50" height="50" style="width: 50px; height: auto;">
     </div>
     <div>
       <div class="wordmark">SEÑORES</div>
@@ -268,4 +268,5 @@
 
 </body>
 </html>
+
 
