--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
     "name": "Señores Agencia",
-    "image": "https://seniorsdigital.netlify.app/img/favicon.png",
+    "image": "https://agenciaseniors.github.io/agencia//img/favicon.png",
     "description": "Agencia de desarrollo de software y marketing digital especializada en negocios privados en Cuba.",
     "address": {
       "@type": "PostalAddress",
@@ -268,5 +268,6 @@
 
 </body>
 </html>
+
 
 
