--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       "latitude": 21.9297,
       "longitude": -79.4425
     },
-    "url": "https://seniorsdigital.netlify.app/",
+    "url": "https://agenciaseniors.github.io/agencia/",
     "telephone": "+5356621636",
     "priceRange": "$$",
     "openingHoursSpecification": {
