--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <a href="#hero">INICIO</a>
     <a href="#proceso">CÓMO TRABAJAMOS</a>
     <a href="#servicios">SERVICIOS</a>
+    <a href="blog.html">BLOG</a>
     <a href="#proyectos">PROYECTOS</a>
     <a href="#contacto">CONTACTO</a>
   </nav>
