--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog | Agencia Señores - Estrategias para el Sector Privado</title>
   <meta name="description" content="Artículos y análisis sobre marketing digital, software y gestión para negocios privados en Cuba. Sancti Spíritus, Villa Clara y Cienfuegos." />
   
@@ -11,16 +11,18 @@
   <link rel="stylesheet" href="css/styles.css">
   
   <style>
-    .blog-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; margin-top: 50px; }
+    /* Estilos específicos para la rejilla del blog */
+    .blog-hero { padding: 120px 20px 60px; text-align: center; background: #0a0a0a; }
+    .blog-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; max-width: 1200px; margin: 0 auto; padding: 0 20px 100px; }
     .blog-card { background: #121212; border: 1px solid #222; border-radius: 4px; overflow: hidden; transition: transform 0.3s ease; display: flex; flex-direction: column; }
-    .blog-card:hover { transform: translateY(-10px); border-color: var(--dorado-suave); }
+    .blog-card:hover { transform: translateY(-10px); border-color: #D4AF37; }
     .blog-img { width: 100%; height: 220px; object-fit: cover; filter: grayscale(30%); transition: filter 0.3s; }
     .blog-card:hover .blog-img { filter: grayscale(0%); }
     .blog-content { padding: 25px; flex-grow: 1; display: flex; flex-direction: column; }
-    .blog-category { color: var(--dorado-suave); font-size: 11px; text-transform: uppercase; letter-spacing: 1px; font-weight: 700; margin-bottom: 10px; }
+    .blog-category { color: #D4AF37; font-size: 11px; text-transform: uppercase; letter-spacing: 1px; font-weight: 700; margin-bottom: 10px; }
     .blog-title { font-family: 'Playfair Display', serif; color: #fff; font-size: 22px; margin-bottom: 15px; line-height: 1.3; }
     .blog-excerpt { color: #999; font-size: 14px; line-height: 1.6; margin-bottom: 20px; flex-grow: 1; }
-    .read-more { color: #fff; text-decoration: none; font-size: 13px; font-weight: 600; text-transform: uppercase; border-bottom: 1px solid var(--dorado-suave); padding-bottom: 3px; align-self: flex-start; }
+    .read-more { color: #fff; text-decoration: none; font-size: 13px; font-weight: 600; text-transform: uppercase; border-bottom: 1px solid #D4AF37; padding-bottom: 3px; align-self: flex-start; }
   </style>
 </head>
 <body>
@@ -32,54 +34,53 @@
   </a>
   <nav>
     <a href="index.html">INICIO</a>
-    <a href="blog.html" style="color:var(--dorado-suave);">BLOG</a>
-    <a href="index.html#contacto">CONTACTO</a>
+    <a href="blog.html" style="color: #D4AF37;">BLOG</a> <a href="index.html#contacto">CONTACTO</a>
   </nav>
   <button class="menu-btn">☰</button>
 </header>
 
-<section class="hero" style="min-height: 50vh; padding-top: 120px;">
-  <h1 style="font-size: clamp(36px, 5vw, 56px); font-family: 'Playfair Display', serif; color: white; text-align: center;">
-    CONOCIMIENTO ESTRATÉGICO <br><span style="color: var(--dorado-suave);">PARA EL SECTOR PRIVADO.</span>
+<section class="blog-hero">
+  <h1 style="font-size: clamp(36px, 5vw, 56px); font-family: 'Playfair Display', serif; color: white;">
+    CONOCIMIENTO ESTRATÉGICO <br><span style="color: #D4AF37;">PARA EL SECTOR PRIVADO.</span>
   </h1>
-  <p style="text-align: center; max-width: 700px; margin: 20px auto; color: #ccc;">
+  <p style="max-width: 700px; margin: 20px auto; color: #ccc;">
     Investigaciones y guías técnicas para dueños de negocios que buscan escalar en el mercado cubano actual.
   </p>
-
-  <div class="blog-grid">
-    
-    <article class="blog-card">
-      <img src="img/software-gestion-mipymes-santa-clara.avif" alt="Software para MIPYMES" class="blog-img">
-      <div class="blog-content">
-        <span class="blog-category">GESTIÓN & SOFTWARE</span>
-        <h2 class="blog-title">¿Sigues llevando el inventario en una libreta? El peligro oculto de las MIPYMES</h2>
-        <p class="blog-excerpt">El "robo hormiga" y la falta de Fichas de Costo están desangrando a los negocios en Santa Clara. Descubre por qué la libreta ya no es suficiente.</p>
-        <a href="articulos/peligro-inventario-mipymes.html" class="read-more">LEER ARTÍCULO COMPLETO</a>
-      </div>
-    </article>
-
-    <article class="blog-card">
-      <img src="img/marketing-inmobiliario-cienfuegos.avif" alt="Hostales de Lujo" class="blog-img">
-      <div class="blog-content">
-        <span class="blog-category">TURISMO & RENTA</span>
-        <h2 class="blog-title">Airbnb se queda con tu ganancia: Por qué tu Hostal necesita una Web Propia</h2>
-        <p class="blog-excerpt">Las comisiones han subido y los pagos se bloquean. Analizamos la matemática detrás de las OTAs y por qué la independencia digital es la única salida.</p>
-        <a href="articulos/hostales-web-directa.html" class="read-more">LEER ARTÍCULO COMPLETO</a>
-      </div>
-    </article>
-
-    <article class="blog-card">
-      <img src="img/diseno-web-restaurantes-trinidad-cuba.avif" alt="Restaurante en Trinidad" class="blog-img">
-      <div class="blog-content">
-        <span class="blog-category">SEO LOCAL</span>
-        <h2 class="blog-title">¿Por qué tu Restaurante es Invisible en Sancti Spíritus? La Guía de Google Maps</h2>
-        <p class="blog-excerpt">La calidad de la comida no importa si el cliente no te encuentra. Cómo usar el SEO Local para llenar tus mesas en 2025.</p>
-        <a href="articulos/seo-restaurantes-cuba.html" class="read-more">LEER ARTÍCULO COMPLETO</a>
-      </div>
-    </article>
-
-  </div>
 </section>
+
+<div class="blog-grid">
+  
+  <article class="blog-card">
+    <img src="img/software-gestion-mipymes-santa-clara.avif" alt="Gestión de Inventarios" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">GESTIÓN & SOFTWARE</span>
+      <h2 class="blog-title">¿Sigues llevando el inventario en una libreta? El peligro oculto de las MIPYMES</h2>
+      <p class="blog-excerpt">El "robo hormiga" y la falta de Fichas de Costo están desangrando a los negocios. Descubre por qué la libreta ya no es suficiente.</p>
+      <a href="articulos/peligro-inventario-mipymes.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/marketing-inmobiliario-cienfuegos.avif" alt="Hostales y Rentas" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">TURISMO & RENTA</span>
+      <h2 class="blog-title">Airbnb se queda con tu ganancia: Por qué tu Hostal necesita una Web Propia</h2>
+      <p class="blog-excerpt">Las comisiones han subido y los pagos se bloquean. Analizamos la matemática detrás de las OTAs y la independencia digital.</p>
+      <a href="articulos/hostales-web-directa.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/diseno-web-restaurantes-trinidad-cuba.avif" alt="Restaurantes y SEO" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">SEO LOCAL</span>
+      <h2 class="blog-title">¿Por qué tu Restaurante es Invisible en Sancti Spíritus? Guía de Google Maps</h2>
+      <p class="blog-excerpt">La calidad de la comida no importa si el cliente no te encuentra. Cómo usar el SEO Local para llenar tus mesas en 2025.</p>
+      <a href="articulos/seo-restaurantes-cuba.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+</div>
 
 <footer>
   <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
