--- a/articulos/peligro-inventario-mipymes.html
+++ b/articulos/peligro-inventario-mipymes.html
@@ -9,24 +9,7 @@
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
-  
-  <style>
-    /* Estilos específicos de lectura */
-    body { background: #0A0A0A; color: #fff; }
-    .article-container { max-width: 800px; margin: 0 auto; padding: 120px 20px; }
-    .article-header { text-align: center; margin-bottom: 50px; border-bottom: 1px solid #333; padding-bottom: 40px; }
-    .article-category { color: #D4AF37; font-weight: 700; font-size: 12px; letter-spacing: 2px; text-transform: uppercase; display: block; margin-bottom: 15px;}
-    .article-title { font-family: 'Playfair Display', serif; font-size: clamp(32px, 5vw, 48px); color: #fff; margin: 10px 0; line-height: 1.2; }
-    .article-meta { color: #666; font-size: 14px; margin-top: 15px;}
-    .article-body { font-family: 'Montserrat', sans-serif; font-size: 18px; line-height: 1.8; color: #ccc; }
-    .article-body h2 { font-family: 'Playfair Display', serif; color: #fff; font-size: 28px; margin-top: 50px; margin-bottom: 20px; border-left: 3px solid #D4AF37; padding-left: 15px;}
-    .article-body p { margin-bottom: 20px; }
-    .article-body ul { margin-bottom: 30px; padding-left: 20px; border-left: 1px solid #333; }
-    .article-body li { margin-bottom: 15px; list-style: none; position: relative; padding-left: 15px;}
-    .article-body li::before { content: "•"; color: #D4AF37; font-weight: bold; position: absolute; left: -5px; }
-    .highlight-box { background: #121212; border: 1px solid #333; padding: 30px; margin: 40px 0; border-radius: 8px; }
-    .cta-box { background: linear-gradient(135deg, #111, #000); border: 1px solid #D4AF37; padding: 50px 30px; text-align: center; margin-top: 80px; border-radius: 8px; }
-  </style>
+  <link rel="stylesheet" href="../css/blog.css">
 </head>
 <body>
 
