--- a/blog.html
+++ b/blog.html
@@ -9,21 +9,7 @@
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  
-  <style>
-    /* Estilos específicos para la rejilla del blog */
-    .blog-hero { padding: 120px 20px 60px; text-align: center; background: #0a0a0a; }
-    .blog-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; max-width: 1200px; margin: 0 auto; padding: 0 20px 100px; }
-    .blog-card { background: #121212; border: 1px solid #222; border-radius: 4px; overflow: hidden; transition: transform 0.3s ease; display: flex; flex-direction: column; }
-    .blog-card:hover { transform: translateY(-10px); border-color: #D4AF37; }
-    .blog-img { width: 100%; height: 220px; object-fit: cover; filter: grayscale(30%); transition: filter 0.3s; }
-    .blog-card:hover .blog-img { filter: grayscale(0%); }
-    .blog-content { padding: 25px; flex-grow: 1; display: flex; flex-direction: column; }
-    .blog-category { color: #D4AF37; font-size: 11px; text-transform: uppercase; letter-spacing: 1px; font-weight: 700; margin-bottom: 10px; }
-    .blog-title { font-family: 'Playfair Display', serif; color: #fff; font-size: 22px; margin-bottom: 15px; line-height: 1.3; }
-    .blog-excerpt { color: #999; font-size: 14px; line-height: 1.6; margin-bottom: 20px; flex-grow: 1; }
-    .read-more { color: #fff; text-decoration: none; font-size: 13px; font-weight: 600; text-transform: uppercase; border-bottom: 1px solid #D4AF37; padding-bottom: 3px; align-self: flex-start; }
-  </style>
+  <link rel="stylesheet" href="css/blog.css">
 </head>
 <body>
 
