--- a/articulos/peligro-inventario-mipymes.html
+++ b/articulos/peligro-inventario-mipymes.html
@@ -71,6 +71,6 @@
   <footer>
     <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
   </footer>
-
+  <script src="../js/script.js"></script>
 </body>
 </html>
