--- a/articulos/hostales-web-directa.html
+++ b/articulos/hostales-web-directa.html
@@ -29,31 +29,31 @@
     </header>
 
     <div class="article-body">
-      <p>En el corazón de Trinidad y Cienfuegos, se libra una batalla por la soberanía económica. [cite_start]Si eres dueño de un hostal o casa de renta de lujo, es probable que hayas construido tu negocio sobre los cimientos prestados de gigantes como Airbnb[cite: 451, 453].</p>
+      <p>En el corazón de Trinidad y Cienfuegos, se libra una batalla por la soberanía económica. Si eres dueño de un hostal o casa de renta de lujo, es probable que hayas construido tu negocio sobre los cimientos prestados de gigantes como Airbnb.</p>
 
-      <p>Durante años, el trato parecía justo. Pero hacia el 2025, la "simbiosis" se ha transformado en dependencia. [cite_start]El modelo de negocio de las agencias online ha cambiado para maximizar sus beneficios a costa de tu margen[cite: 458, 459].</p>
+      <p>Durante años, el trato parecía justo. Pero hacia el 2025, la "simbiosis" se ha transformado en dependencia. El modelo de negocio de las agencias online ha cambiado para maximizar sus beneficios a costa de tu margen.</p>
 
       <h2>El Aumento Silencioso de las Comisiones</h2>
-      [cite_start]<p>Airbnb está migrando agresivamente al modelo "Host-Only Fee" (Comisión solo al anfitrión), donde la tarifa que pagas puede saltar del 3% tradicional al <strong>15% o más</strong>[cite: 474, 476].</p>
+      <p>Airbnb está migrando agresivamente al modelo "Host-Only Fee" (Comisión solo al anfitrión), donde la tarifa que pagas puede saltar del 3% tradicional al <strong>15% o más</strong>.</p>
       
-      <p>Si facturas 20 noches al mes a $50 USD, bajo este nuevo modelo podrías estar perdiendo más de <strong>$120 USD mensuales</strong> solo en comisiones adicionales. [cite_start]Al año, eso es suficiente para renovar una habitación completa o pagar tu propia infraestructura digital[cite: 498, 499].</p>
+      <p>Si facturas 20 noches al mes a $50 USD, bajo este nuevo modelo podrías estar perdiendo más de <strong>$120 USD mensuales</strong> solo en comisiones adicionales. Al año, eso es suficiente para renovar una habitación completa o pagar tu propia infraestructura digital.</p>
 
       <h2>El Bloqueo dentro del Bloqueo</h2>
-      <p>Más allá de cuánto te cobran, el problema existencial es <em>si vas a cobrar</em>. [cite_start]Las restricciones financieras hacen que depender de una plataforma estadounidense sea un riesgo operativo constante[cite: 512]. [cite_start]Hemos visto casos de pagos retenidos y categorías enteras (como las "Experiencias") eliminadas de un día para otro[cite: 518].</p>
+      <p>Más allá de cuánto te cobran, el problema existencial es <em>si vas a cobrar</em>. Las restricciones financieras hacen que depender de una plataforma estadounidense sea un riesgo operativo constante. Hemos visto casos de pagos retenidos y categorías enteras (como las "Experiencias") eliminadas de un día para otro.</p>
 
       <h2>La Solución: Reservas Directas</h2>
       <p>La única salida viable es la <strong>independencia digital</strong>. Tener tu propia web te permite:</p>
       <ul>
         <li><strong>Control Total:</strong> Nadie te puede cerrar la cuenta ni cambiarte las comisiones.</li>
-        [cite_start]<li><strong>Pagos en Euros:</strong> Integramos pasarelas como <strong>TropiPay</strong> para que cobres directo desde Europa o Canadá[cite: 636].</li>
-        <li><strong>Base de Datos Propia:</strong> El cliente es tuyo, no de Airbnb. [cite_start]Puedes hacerles marketing para que regresen[cite: 526].</li>
+        <li><strong>Pagos en Euros:</strong> Integramos pasarelas como <strong>TropiPay</strong> para que cobres directo desde Europa o Canadá.</li>
+        <li><strong>Base de Datos Propia:</strong> El cliente es tuyo, no de Airbnb. Puedes hacerles marketing para que regresen.</li>
       </ul>
 
       <div class="highlight-box">
-        [cite_start]<p style="font-family: 'Playfair Display', serif; font-size: 22px; color: #fff; margin:0;">"Una web propia no es un gasto, es un activo que aumenta el valor de tu negocio." [cite: 700]</p>
+        <p style="font-family: 'Playfair Display', serif; font-size: 22px; color: #fff; margin:0;">"Una web propia no es un gasto, es un activo que aumenta el valor de tu negocio."</p>
       </div>
 
-      <p>En <strong>Agencia Señores</strong>, no usamos plantillas lentas. [cite_start]Creamos sitios ultraligeros optimizados para que el turista que ya está en Cuba (con datos móviles limitados) pueda ver tus fotos y reservar sin frustraciones [cite: 573-577].</p>
+      <p>En <strong>Agencia Señores</strong>, no usamos plantillas lentas. Creamos sitios ultraligeros optimizados para que el turista que ya está en Cuba (con datos móviles limitados) pueda ver tus fotos y reservar sin frustraciones.</p>
     </div>
 
     <div class="cta-box">
