--- a/articulos/seo-restaurantes-cuba.html
+++ b/articulos/seo-restaurantes-cuba.html
@@ -29,24 +29,24 @@
     </header>
 
     <div class="article-body">
-      <p>La historia comercial de Sancti Spíritus se ha escrito tradicionalmente sobre piedra y barro. Sin embargo, en 2025, el éxito de tu restaurante se escribe en código binario. [cite_start]La calidad de tu comida ya no es lo único que importa: si no te encuentran en el celular, no existes[cite: 176, 180].</p>
+      <p>La historia comercial de Sancti Spíritus se ha escrito tradicionalmente sobre piedra y barro. Sin embargo, en 2025, el éxito de tu restaurante se escribe en código binario. La calidad de tu comida ya no es lo único que importa: si no te encuentran en el celular, no existes.</p>
 
       <h2>La Economía de los Megas</h2>
-      <p>En Cuba, navegar por internet no es ocio, es una inversión. El usuario cubano opera bajo una "economía de megas". [cite_start]Si tu menú es un archivo PDF de 10MB, estás perdiendo clientes antes de que crucen tu puerta[cite: 191, 193].</p>
+      <p>En Cuba, navegar por internet no es ocio, es una inversión. El usuario cubano opera bajo una "economía de megas". Si tu menú es un archivo PDF de 10MB, estás perdiendo clientes antes de que crucen tu puerta.</p>
       
       <div class="highlight-box">
-        [cite_start]<p style="font-family: 'Playfair Display', serif; font-size: 22px; color: #fff; margin:0;">"Si tu web tarda más de 5 segundos en cargar, el usuario abandona. En turismo, perder al usuario es perder la venta." [cite: 196, 559]</p>
+        <p style="font-family: 'Playfair Display', serif; font-size: 22px; color: #fff; margin:0;">"Si tu web tarda más de 5 segundos en cargar, el usuario abandona. En turismo, perder al usuario es perder la venta."</p>
       </div>
 
-      <p>En <strong>Agencia Señores</strong>, aplicamos una filosofía de <em>Ingeniería de la Escasez</em>. [cite_start]Creamos menús digitales nativos en HTML que cargan instantáneamente, sin obligar al cliente a descargar archivos pesados[cite: 310].</p>
+      <p>En <strong>Agencia Señores</strong>, aplicamos una filosofía de <em>Ingeniería de la Escasez</em>. Creamos menús digitales nativos en HTML que cargan instantáneamente, sin obligar al cliente a descargar archivos pesados.</p>
 
       <h2>Google Maps: Tu local en la calle principal</h2>
-      <p>El "Perfil de Negocio de Google" envía más clientes que Facebook e Instagram juntos. [cite_start]Cuando un turista busca "Mejor ropa vieja en Sancti Spíritus", Google decide a quién mostrar [cite: 250-253].</p>
+      <p>El "Perfil de Negocio de Google" envía más clientes que Facebook e Instagram juntos. Cuando un turista busca "Mejor ropa vieja en Sancti Spíritus", Google decide a quién mostrar.</p>
       
-      <p>No basta con estar en el mapa; hay que dominarlo. [cite_start]Una ficha optimizada, con fotos geo-etiquetadas y reseñas recientes, es la diferencia entre un salón vacío y una lista de espera[cite: 260].</p>
+      <p>No basta con estar en el mapa; hay que dominarlo. Una ficha optimizada, con fotos geo-etiquetadas y reseñas recientes, es la diferencia entre un salón vacío y una lista de espera.</p>
 
       <h2>El Poder del "Modo Oscuro"</h2>
-      <p>Para la vida nocturna y la restauración de gama alta, el diseño en "Modo Oscuro" es un estándar de sofisticación. [cite_start]Además, en las pantallas modernas, el fondo negro ahorra batería al usuario, un detalle técnico que genera empatía en nuestro contexto[cite: 316, 321].</p>
+      <p>Para la vida nocturna y la restauración de gama alta, el diseño en "Modo Oscuro" es un estándar de sofisticación. Además, en las pantallas modernas, el fondo negro ahorra batería al usuario, un detalle técnico que genera empatía en nuestro contexto.</p>
     </div>
 
     <div class="cta-box">
