--- a/articulos/seo-restaurantes-cuba.html
+++ b/articulos/seo-restaurantes-cuba.html
@@ -59,6 +59,7 @@
   <footer>
     <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
   <script src="../js/script.js"></script>
 </body>
 </html>
