--- a/articulos/hostales-web-directa.html
+++ b/articulos/hostales-web-directa.html
@@ -67,6 +67,6 @@
     <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
-  <script src="../js/script.js"></script>
+  <script src="../js/blog-script.js"></script>
 </body>
 </html>
