--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,46 @@
 <div class="blog-grid">
   
   <article class="blog-card">
+    <img src="https://images.unsplash.com/photo-1558655146-d09347e92766?q=80&w=800&auto=format&fit=crop" alt="Diseño de Branding Lujo" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">BRANDING & DISEÑO</span>
+      <h2 class="blog-title">Tu logo barato te está costando clientes: La psicología del precio</h2>
+      <p class="blog-excerpt">¿Tu negocio se ve profesional o amateur? Descubre por qué una buena Identidad Visual te permite cobrar más caro.</p>
+      <a href="articulos/branding-identidad-visual.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="https://images.unsplash.com/photo-1611162616475-46b635cb6868?q=80&w=800&auto=format&fit=crop" alt="Marketing en Redes Sociales" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">MARKETING DIGITAL</span>
+      <h2 class="blog-title">Más allá de Revolico: Por qué tus publicaciones en grupos ya no venden igual</h2>
+      <p class="blog-excerpt">Publicar en grupos de compraventa ya no es suficiente. Aprende cómo las estrategias profesionales pueden llenar tu negocio.</p>
+      <a href="articulos/facebook-ads-cuba.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="https://images.unsplash.com/photo-1614680376593-902f74cf0d41?q=80&w=800&auto=format&fit=crop" alt="WhatsApp Business Automatización" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">AUTOMATIZACIÓN</span>
+      <h2 class="blog-title">Convierte tu WhatsApp en una Tienda Online: Vende mientras duermes</h2>
+      <p class="blog-excerpt">Deja de responder lo mismo 100 veces al día. Aprende a usar WhatsApp Business como una herramienta de venta automática.</p>
+      <a href="articulos/automatizacion-whatsapp-negocios.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="https://images.unsplash.com/photo-1523474253046-8cd2748b5fd2?q=80&w=800&auto=format&fit=crop" alt="Código vs Wordpress" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">DESARROLLO WEB</span>
+      <h2 class="blog-title">WordPress vs. Código a Medida: ¿Por qué las plantillas fallan en Cuba?</h2>
+      <p class="blog-excerpt">Analizamos por qué una web optimizada con código puro es vital para sobrevivir a la conexión lenta de ETECSA.</p>
+      <a href="articulos/por-que-web-a-medida.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
     <img src="img/software-control-inventario-cuba.avif" alt="Gestión de Inventarios" class="blog-img">
     <div class="blog-content">
       <span class="blog-category">GESTIÓN & SOFTWARE</span>
