--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 <div class="blog-grid">
   
   <article class="blog-card">
-    <img src="https://images.unsplash.com/photo-1558655146-d09347e92766?q=80&w=800&auto=format&fit=crop" alt="Diseño de Branding Lujo" class="blog-img">
+    <img src="img/diseno-identidad-visual-lujo-cuba.avif" alt="Diseño de Branding Lujo" class="blog-img">
     <div class="blog-content">
       <span class="blog-category">BRANDING & DISEÑO</span>
       <h2 class="blog-title">Tu logo barato te está costando clientes: La psicología del precio</h2>
@@ -47,7 +47,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="https://images.unsplash.com/photo-1611162616475-46b635cb6868?q=80&w=800&auto=format&fit=crop" alt="Marketing en Redes Sociales" class="blog-img">
+    <img src="img/estrategia-marketing-digital-redes-sociales-santa-clara.avif" alt="Marketing en Redes Sociales" class="blog-img">
     <div class="blog-content">
       <span class="blog-category">MARKETING DIGITAL</span>
       <h2 class="blog-title">Más allá de Revolico: Por qué tus publicaciones en grupos ya no venden igual</h2>
@@ -57,7 +57,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="https://images.unsplash.com/photo-1614680376593-902f74cf0d41?q=80&w=800&auto=format&fit=crop" alt="WhatsApp Business Automatización" class="blog-img">
+    <img src="img/automatizacion-whatsapp-business-ventas-online.avif" alt="WhatsApp Business Automatización" class="blog-img">
     <div class="blog-content">
       <span class="blog-category">AUTOMATIZACIÓN</span>
       <h2 class="blog-title">Convierte tu WhatsApp en una Tienda Online: Vende mientras duermes</h2>
@@ -67,7 +67,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="https://images.unsplash.com/photo-1523474253046-8cd2748b5fd2?q=80&w=800&auto=format&fit=crop" alt="Código vs Wordpress" class="blog-img">
+    <img src="img/desarrollo-web-codigo-a-medida-vs-wordpress.avif" alt="Código vs Wordpress" class="blog-img">
     <div class="blog-content">
       <span class="blog-category">DESARROLLO WEB</span>
       <h2 class="blog-title">WordPress vs. Código a Medida: ¿Por qué las plantillas fallan en Cuba?</h2>
