--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog | Agencia Señores - Estrategias para el Sector Privado</title>
   <meta name="description" content="Artículos y análisis sobre marketing digital, software y gestión para negocios privados en Cuba. Sancti Spíritus, Villa Clara y Cienfuegos." />
-  
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
