--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>SEÑORES | Marketing Digital & Software en Cuba</title>
   <meta name="description" content="Agencia de desarrollo web y marketing digital en el centro de Cuba. Soluciones de software para MIPYMES, Hostales y Negocios en Sancti Spíritus, Trinidad y Santa Clara." />
   <meta name="keywords" content="diseño web cuba, marketing digital sancti spiritus, programadores villa clara, publicidad para mipymes, software a medida cienfuegos, gestion redes sociales trinidad, señores agencia" />
-  
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="google-site-verification" content="google94be4ac819c7115c" />
 
   <meta name="geo.region" content="CU-07" />
