--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
   <meta name="geo.placename" content="Sancti Spíritus" />
   <meta name="geo.position" content="21.9297;-79.4425" />
   <meta name="ICBM" content="21.9297, -79.4425" />
-  
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://agenciaseniors.github.io/agencia/">
+  <meta property="og:title" content="SEÑORES | Marketing Digital & Software en Cuba">
+  <meta property="og:description" content="Ingeniería aplicada al marketing. Desarrollo de software y diseño web para MIPYMES y Hostales en Sancti Spíritus y el centro de Cuba.">
+  <meta property="og:image" content="https://agenciaseniors.github.io/agencia/img/diseno-identidad-visual-lujo-cuba.avif">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="agenciaseniors.github.io">
+  <meta property="twitter:url" content="https://agenciaseniors.github.io/agencia/">
+  <meta name="twitter:title" content="SEÑORES | Marketing Digital & Software en Cuba">
+  <meta name="twitter:description" content="Ingeniería aplicada al marketing. Desarrollo de software y diseño web para MIPYMES y Hostales en Sancti Spíritus.">
+  <meta name="twitter:image" content="https://agenciaseniors.github.io/agencia/img/diseno-identidad-visual-lujo-cuba.avif">
   <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
   <link rel="icon" type="image/png" href="img/logo-192.png" sizes="192x192">
   <link rel="apple-touch-icon" href="img/logo-192.png">
