--- a/articulos/seo-restaurantes-cuba.html
+++ b/articulos/seo-restaurantes-cuba.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SEO para Restaurantes en Sancti Spíritus | Blog Señores</title>
   <meta name="description" content="Por qué los menús en PDF alejan a los clientes y cómo usar Google Maps para llenar tu restaurante en el centro de Cuba." />
-  
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
