--- a/articulos/automatizacion-whatsapp-negocios.html
+++ b/articulos/automatizacion-whatsapp-negocios.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Automatiza tu WhatsApp y Vende 24/7 | Blog Señores</title>
   <meta name="description" content="Deja de responder lo mismo 100 veces al día. Aprende a usar WhatsApp Business como una herramienta de venta automática para tu negocio." />
-  
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
