--- a/articulos/branding-identidad-visual.html
+++ b/articulos/branding-identidad-visual.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tu logo barato te está costando clientes | Blog Señores</title>
   <meta name="description" content="¿Tu negocio se ve profesional o amateur? Descubre por qué una buena Identidad Visual te permite cobrar más caro en el mercado cubano." />
-  
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
