--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <footer>
   <div class="footer-content">
     <p>© 2025 SEÑORES — DIGITAL MARKETING & SOFTWARE</p>
-    
+    <p style="font-size: 10px;"><a href="politica-privacidad.html" style="color: #666; text-decoration: none;">Política de Privacidad</a></p>
     <div class="seo-locations">
       <span class="seo-label">Impulsando el sector privado en la Región Central:</span>
       <nav class="seo-nav">
