--- a/index.html
+++ b/index.html
@@ -242,12 +242,41 @@
 </section>
 
 <section id="contacto" class="reveal" style="text-align: center;">
-  <h3>HABLEMOS DE TU IDEA</h3>
-  <p style="color:#ccc; margin-bottom: 30px;">Lleva tu negocio al mundo digital hoy mismo.</p>
+  <h3 style="margin-bottom: 10px;">CONECTA CON NOSOTROS</h3>
+  <p style="color:#888; margin-bottom: 50px; max-width: 600px; margin-left: auto; margin-right: auto;">
+    Sin intermediarios ni esperas. Elige tu canal preferido y hablemos de negocios.
+  </p>
+
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px;">
+    
+    <div style="background: #111; border: 1px solid #333; padding: 40px 30px; border-radius: 8px; width: 100%; max-width: 350px; transition: transform 0.3s;" onmouseover="this.style.borderColor='#D4AF37'; this.style.transform='translateY(-5px)'" onmouseout="this.style.borderColor='#333'; this.style.transform='translateY(0)'">
+      <div style="font-size: 40px; margin-bottom: 20px;">🚀</div>
+      <h4 style="color: white; font-family: 'Playfair Display', serif; margin-bottom: 10px; font-size: 20px;">Respuesta Inmediata</h4>
+      <p style="color: #999; font-size: 13px; line-height: 1.6; margin-bottom: 25px;">
+        La forma más rápida de cotizar. Ideal para dudas puntuales y agendar reuniones.
+      </p>
+      <a href="https://wa.me/5356621636?text=Hola%20Señores,%20quiero%20llevar%20mi%20negocio%20al%20siguiente%20nivel." target="_blank" class="btn" style="background: #25D366; color: white; width: 100%; border: none; box-shadow: 0 4px 15px rgba(37, 211, 102, 0.2);">
+        ABRIR WHATSAPP
+      </a>
+    </div>
+
+    <div style="background: #111; border: 1px solid #333; padding: 40px 30px; border-radius: 8px; width: 100%; max-width: 350px; transition: transform 0.3s;" onmouseover="this.style.borderColor='#fff'; this.style.transform='translateY(-5px)'" onmouseout="this.style.borderColor='#333'; this.style.transform='translateY(0)'">
+      <div style="font-size: 40px; margin-bottom: 20px;">✉️</div>
+      <h4 style="color: white; font-family: 'Playfair Display', serif; margin-bottom: 10px; font-size: 20px;">Propuesta Formal</h4>
+      <p style="color: #999; font-size: 13px; line-height: 1.6; margin-bottom: 25px;">
+        ¿Tienes un proyecto complejo? Envíanos los detalles y te responderemos en 24h.
+      </p>
+      <a href="mailto:seniors.contacto@gmail.com" class="btn" style="background: transparent; border: 1px solid #666; color: white; width: 100%;">
+        ENVIAR CORREO
+      </a>
+    </div>
+
+  </div>
   
-  <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
-    <a href="mailto:senores.agencia@gmail.com" class="btn" style="background: transparent; border-color: #666; color: #fff; margin-top: 0;">✉️ ENVIAR CORREO</a>
-    <a href="https://wa.me/5356621636?text=Hola%20Señores,%20quisiera%20más%20información." target="_blank" class="btn" style="background: #25D366; border-color: #25D366; color: #fff; box-shadow: 0 4px 15px rgba(37, 211, 102, 0.4); margin-top: 0;">📱 WHATSAPP (+53 5662 1636)</a>
+  <div style="margin-top: 60px; border-top: 1px solid #222; padding-top: 40px;">
+    <p style="color: #666; font-size: 12px; letter-spacing: 1px; text-transform: uppercase;">
+      HORARIO DE ATENCIÓN: LUNES A VIERNES • 9:00 AM - 6:00 PM
+    </p>
   </div>
 </section>
 
