--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
 
 <section class="hero reveal" id="hero">
   <h1 style="font-size: clamp(40px, 5vw, 64px); font-weight: 900; font-family: 'Playfair Display', serif; color:var(--blanco-puro); line-height: 1.1; margin-bottom: 20px;">
-    INGENIERÍA APLICADA AL <br><span>MARKETING DIGITAL.</span>
+    INGENIERÍA DE SOFTWARE &<br><span>ESTRATEGIA DE NEGOCIOS.</span>
     <span class="sr-only">EN SANCTI SPÍRITUS Y VILLA CLARA</span>
   </h1>
   
-  <p>Somos <strong>Agencia Señores</strong>, un equipo de desarrolladores de software y expertos en marketing en el centro de Cuba. Ayudamos a <strong>MIPYMES y negocios privados</strong> a digitalizarse con código limpio y estrategias efectivas.</p>
+  <p>Elevamos el estándar del sector privado en Cuba. Ayudamos a MIPYMES en Santa Clara y Cienfuegos a facturar más mediante tecnología a medida..</p>
   
   <div>
-    <a href="https://wa.me/5356621636?text=Hola%20Señores,%20quiero%20digitalizar%20mi%20negocio." target="_blank" class="btn">COTIZAR MI PROYECTO</a>
+    <a href="https://wa.me/5356621636?text=Hola%20Señores,%20quiero%20digitalizar%20mi%20negocio." target="_blank" class="btn">QUIERO DIGITALIZARME</a>
   </div>
 </section>
 
