--- a/articulos/automatizacion-whatsapp-negocios.html
+++ b/articulos/automatizacion-whatsapp-negocios.html
@@ -48,7 +48,7 @@
       <ul>
         <li><strong>Catálogos Interactivos:</strong> El cliente ve tus productos sin salir del chat.</li>
         <li><strong>Respuestas Automáticas Inteligentes:</strong> Tu "robot" contesta precios, horarios y ubicación al instante.</li>
-        <li><strong>Enlaces de Pago:</strong> Cierra la venta en el momento.</li>
+        <p>No necesitas una aplicación compleja. Necesitas optimizar la herramienta que ya tienes en el bolsillo. Y recuerda: una vez automatices la atención, necesitarás atraer más clientes con una <a href="facebook-ads-cuba.html" style="color: #D4AF37; text-decoration: none; font-weight: bold;">Estrategia de Marketing en Facebook</a> para llenar ese chat de pedidos.</p>
       </ul>
 
       <div class="highlight-box">
