--- a/articulos/facebook-ads-cuba.html
+++ b/articulos/facebook-ads-cuba.html
@@ -48,7 +48,7 @@
       <ul>
         <li><strong>Segmentación Real:</strong> Creamos contenido diseñado para tu cliente ideal (el que tiene dinero y quiere calidad), no para el que busca lo más barato.</li>
         <li><strong>Embudos de Venta:</strong> Convertimos un "Me gusta" en un mensaje de WhatsApp y luego en una venta.</li>
-        <li><strong>Estética Profesional:</strong> Tus posts deben verse tan bien como tu producto.</li>
+        <li><strong>Estética Profesional:</strong> Tus posts deben verse tan bien como tu producto. De nada sirve pagar publicidad si no tienes una <a href="branding-identidad-visual.html" style="color: #D4AF37; text-decoration: none; font-weight: bold;">Identidad Visual Premium</a> que genere confianza al primer vistazo.</li>
       </ul>
 
       <div class="highlight-box">
