--- a/index.html
+++ b/index.html
@@ -202,10 +202,39 @@
   </div>
 </section>
 
-<section id="proyectos" class="reveal">
-  <h3>QUÉ SOMOS CAPACES DE HACER</h3>
-  <p style="color:#888; margin-bottom: 25px;">Selección de proyectos y demos técnicas.</p>
-  <div class="projects-grid" id="projectsGrid"></div>
+<section id="valor" class="reveal" style="padding: 100px 5%; background: linear-gradient(to bottom, #0A0A0A, #0f0f0f);">
+  <h3 style="margin-bottom: 60px;">¿POR QUÉ ELEGIR INGENIEROS?</h3>
+  
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 40px; max-width: 1100px; margin: 0 auto;">
+    
+    <div style="text-align: left; padding-left: 25px; border-left: 1px solid #D4AF37;">
+      <h4 style="color: white; font-family: 'Playfair Display', serif; font-size: 22px; margin-bottom: 15px;">
+        <span style="color: #D4AF37;">01.</span> Optimizado para ETECSA
+      </h4>
+      <p style="color: #888; font-size: 14px; line-height: 1.7;">
+        Olvídate de las páginas que no cargan con datos móviles. No usamos plantillas pesadas de WordPress. Escribimos código puro ultraligero que vuela en la red de Cuba.
+      </p>
+    </div>
+
+    <div style="text-align: left; padding-left: 25px; border-left: 1px solid #333; transition: border-color 0.3s;" onmouseover="this.style.borderColor='#D4AF37'" onmouseout="this.style.borderColor='#333'">
+      <h4 style="color: white; font-family: 'Playfair Display', serif; font-size: 22px; margin-bottom: 15px;">
+        <span style="color: #D4AF37;">02.</span> Seguridad Blindada
+      </h4>
+      <p style="color: #888; font-size: 14px; line-height: 1.7;">
+        Al no tener bases de datos vulnerables expuestas, nuestros sitios son virtualmente imposibles de hackear. Tu negocio y la reputación de tu marca están seguros.
+      </p>
+    </div>
+
+    <div style="text-align: left; padding-left: 25px; border-left: 1px solid #333; transition: border-color 0.3s;" onmouseover="this.style.borderColor='#D4AF37'" onmouseout="this.style.borderColor='#333'">
+      <h4 style="color: white; font-family: 'Playfair Display', serif; font-size: 22px; margin-bottom: 15px;">
+        <span style="color: #D4AF37;">03.</span> Diseño para Vender
+      </h4>
+      <p style="color: #888; font-size: 14px; line-height: 1.7;">
+        No hacemos "arte", hacemos herramientas de venta. Cada botón, color y texto está colocado estratégicamente para convertir visitas en clientes que pagan.
+      </p>
+    </div>
+
+  </div>
 </section>
 
 <section id="faq" class="reveal" style="max-width: 800px; margin: 0 auto;">
