--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <span class="sr-only">EN SANCTI SPÍRITUS Y VILLA CLARA</span>
   </h1>
   
-  <p>Elevamos el estándar del sector privado en Cuba. Ayudamos a MIPYMES en Santa Clara, Sancti Spíritus y Cienfuegos a facturar más mediante tecnología a medida..</p>
+  <p>Elevamos el estándar del sector privado en Cuba. Ayudamos a MIPYMES en Santa Clara, Sancti Spíritus y Cienfuegos a facturar más mediante tecnología a medida.</p>
   
   <div>
     <a href="https://wa.me/5356621636?text=Hola%20Señores,%20quiero%20digitalizar%20mi%20negocio." target="_blank" class="btn">QUIERO DIGITALIZARME</a>
