--- a/index.html
+++ b/index.html
@@ -233,7 +233,58 @@
 
   </div>
 </section>
+<section id="selection" class="reveal" style="background: #050505; padding-top: 80px;">
+  <div style="text-align: center; margin-bottom: 60px;">
+    <span style="color: var(--dorado-suave); font-size: 12px; letter-spacing: 3px; font-weight: 700;">THE SELECTION</span>
+    <h3 style="margin-top: 10px; margin-bottom: 15px;">EXPERIENCIAS GASTRONÓMICAS</h3>
+    <p style="color: #666; max-width: 500px; margin: 0 auto; font-size: 14px;">
+      Una colección curada de los mejores destinos culinarios, digitalizados por SEÑORES.
+    </p>
+  </div>
 
+  <div class="selection-grid">
+    
+    <a href="menues/d-la-vida-bar.html" class="selection-card">
+      <div class="selection-img-container">
+        <img src="img/menu-digital-restaurante-sancti-spiritus.avif" alt="D' La Vida Bar" class="selection-img">
+        <div class="overlay">
+          <span class="btn-ver-menu">VER MENÚ</span>
+        </div>
+      </div>
+      <div class="selection-info">
+        <h4>D' LA VIDA BAR</h4>
+        <p>[PONER DIRECCIÓN O TIPO DE COMIDA]</p>
+      </div>
+    </a>
+
+    <a href="menues/la-casona.html" class="selection-card">
+      <div class="selection-img-container">
+        <img src="img/diseno-web-restaurantes-trinidad-cuba.avif" alt="La Casona" class="selection-img">
+        <div class="overlay">
+          <span class="btn-ver-menu">VER MENÚ</span>
+        </div>
+      </div>
+      <div class="selection-info">
+        <h4>LA CASONA</h4>
+        <p>[PONER DIRECCIÓN AQUÍ]</p>
+      </div>
+    </a>
+
+    <a href="menues/el-real.html" class="selection-card">
+      <div class="selection-img-container">
+        <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="El Real" class="selection-img">
+        <div class="overlay">
+          <span class="btn-ver-menu">VER MENÚ</span>
+        </div>
+      </div>
+      <div class="selection-info">
+        <h4>EL REAL</h4>
+        <p>[PONER DIRECCIÓN AQUÍ]</p>
+      </div>
+    </a>
+
+  </div>
+</section>
 <section id="faq" class="reveal" style="max-width: 800px; margin: 0 auto;">
   <h3>PREGUNTAS FRECUENTES</h3>
   
