--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
     "name": "Señores Agencia",
-    "image": "https://agenciaseniors.github.io/agencia//img/favicon.png",
+    "image": "https://agenciaseniors.com//img/favicon.png",
     "description": "Agencia de desarrollo de software y marketing digital especializada en negocios privados en Cuba.",
     "address": {
       "@type": "PostalAddress",
@@ -59,7 +59,7 @@
       "latitude": 21.9297,
       "longitude": -79.4425
     },
-    "url": "https://agenciaseniors.github.io/agencia/",
+    "url": "https://agenciaseniors.com",
     "telephone": "+5356621636",
     "priceRange": "$$",
     "openingHoursSpecification": {
@@ -270,7 +270,7 @@
       </div>
     </a>
 
-    <a href="menues/el-real.html" class="selection-card">
+    <a href="menues/d_lavida_bar/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="El Real" class="selection-img">
         <div class="overlay">
