--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
   <div class="selection-grid">
     
-    <a href="menues/d-la-vida-bar.html" class="selection-card">
+    <a href="menues/d_lavida_bar/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/menu-digital-restaurante-sancti-spiritus.avif" alt="D' La Vida Bar" class="selection-img">
         <div class="overlay">
@@ -253,7 +253,7 @@
       </div>
       <div class="selection-info">
         <h4>D' LA VIDA BAR</h4>
-        <p>[PONER DIRECCIÓN O TIPO DE COMIDA]</p>
+        <p>Carlos Roloff 151 entre Frank País y Mirto</p>
       </div>
     </a>
 
@@ -270,7 +270,7 @@
       </div>
     </a>
 
-    <a href="menues/d_lavida_bar/index.html" class="selection-card">
+    <a href="menues/el-real.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="El Real" class="selection-img">
         <div class="overlay">
